// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorsList renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-AxiKw sc-psDhf iXvOkL"
      width="1"
    >
      <div
        class="sc-AxhCb exqJiw"
      >
        No donors yet...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DonorsList skeleton renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-pbJYR hNzbLI sc-pkfPC fQMEfn"
  >
    <div
      class="sc-AxjAm sc-AxiKw sc-psDhf iXvOkL"
      width="1"
    >
      <div
        class="sc-AxjAm sc-qYsuA sc-qQxFs bUCIQq sc-pBlxj fEneLh"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxjAm sc-qYsuA sc-qQxFs bUCIQq sc-pBlxj fEneLh"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxjAm sc-qYsuA sc-qQxFs bUCIQq sc-pBlxj fEneLh"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
